--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1><img src="images/notes.png" /> Notes App</h1>
+      <h1><img src="images/notes.png" /> Notes</h1>
       <button type="button" class="btn">Create Notes</button>
       <div class="notes-container">
         <!-- <p contenteditable="true" class="input-box">
